# serializer version: 1
# name: test_all_entities[media_player.anthem_av-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.anthem_av',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.RECEIVER: 'receiver'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'anthemav',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 2444>,
    'translation_key': None,
    'unique_id': '00:00:00:00:00:01',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[media_player.anthem_av-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'receiver',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Anthem AV',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 2444>,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.anthem_av',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[media_player.zone_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.zone_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.RECEIVER: 'receiver'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'anthemav',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 2444>,
    'translation_key': None,
    'unique_id': '00:00:00:00:00:01_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[media_player.zone_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'receiver',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Zone 2',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <MediaPlayerEntityFeature: 2444>,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.zone_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
